; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vt6656/extr_mac.c_MACvSetBBType.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vt6656/extr_mac.c_MACvSetBBType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EnCFG_BBType_MASK = common dso_local global i32 0, align 4
@MESSAGE_TYPE_WRITE_MASK = common dso_local global i32 0, align 4
@MAC_REG_ENCFG0 = common dso_local global i32 0, align 4
@MESSAGE_REQUEST_MACREG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MACvSetBBType(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [2 x i32], align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @EnCFG_BBType_MASK, align 4
  %9 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 1
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @MESSAGE_TYPE_WRITE_MASK, align 4
  %12 = load i32, i32* @MAC_REG_ENCFG0, align 4
  %13 = load i32, i32* @MESSAGE_REQUEST_MACREG, align 4
  %14 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %15 = call i32 @CONTROLnsRequestOut(i32 %10, i32 %11, i32 %12, i32 %13, i32 2, i32* %14)
  ret void
}

declare dso_local i32 @CONTROLnsRequestOut(i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
